--- a/src/content/geo/2-how-to-train-generative-ai-to-recognize-and-trust-your-brand.mdx
+++ b/src/content/geo/2-how-to-train-generative-ai-to-recognize-and-trust-your-brand.mdx
@@ -21,7 +21,7 @@ As generative AI systems increasingly mediate between students and institutions,
 **The fundamental challenge:** AI doesn't browse your website like a human—it synthesizes what it learned during training. If your brand messaging is scattered or inconsistent, generative AI will create a fuzzy or incomplete picture of your institution.
 </CalloutBox>
 
-This article explores how Large Language Models (LLMs) interpret brand information and what steps you can take to "train" these models to properly represent your brand in an era where <CitedText type="statistic" source="McKinsey Global Institute" author="McKinsey & Company" year="2023" title="The Economic Potential of Generative AI: The Next Productivity Frontier" url="https://www.mckinsey.com/industries/education/our-insights/the-economic-potential-of-generative-ai-the-next-productivity-frontier" citationNumber={1}>major browsers and productivity platforms are rapidly integrating generative AI, fundamentally bypassing traditional search result pages</CitedText>.
+This article explores how Large Language Models (LLMs) interpret brand information and what steps you can take to "train" these models to properly represent your brand in an era where <CitedText type="statistic" source="McKinsey Global Institute" author="McKinsey & Company" year="2023" title="The Economic Potential of Generative AI: The Next Productivity Frontier" url="https://www.mckinsey.com/industries/education/our-insights/the-economic-potential-of-generative-ai-the-next-productivity-frontier">major browsers and productivity platforms are rapidly integrating generative AI, fundamentally bypassing traditional search result pages</CitedText>.
 
 ## How AI "Sees" Your Institution
 
@@ -66,7 +66,7 @@ This can be dangerous if the AI's info is outdated or slightly off. For example,
 The core challenge is that **AIs "don't scan, they summarize"**. They infer your brand identity from repeated patterns, clear statements, and context, rather than reading every word anew.
 </CalloutBox>
 
-<CitedText type="fact" source="AI Research Quarterly" author="Stanford NLP Group" year="2024" title="Pattern Recognition in Large Language Models" url="https://ai.stanford.edu/research/pattern-recognition-llms" citationNumber={2}>Research shows that large language models store information about entities in distributed representations that prioritize frequently encountered patterns and distinctive features</CitedText>. This has profound implications for higher ed institutions trying to establish their digital identity.
+<CitedText type="fact" source="AI Research Quarterly" author="Stanford NLP Group" year="2024" title="Pattern Recognition in Large Language Models" url="https://ai.stanford.edu/research/pattern-recognition-llms">Research shows that large language models store information about entities in distributed representations that prioritize frequently encountered patterns and distinctive features</CitedText>. This has profound implications for higher ed institutions trying to establish their digital identity.
 
 ### Trust Signals Matter
 
@@ -113,7 +113,7 @@ Conversely, if there's a lot of conflicting or negative information, the AI migh
 />
 
 <CalloutBox type="insight">
-**Strategic Implication:** <CitedText type="analysis" source="Journal of AI & Education" author="Li et al." year="2024" title="Trust Patterns in Educational Content Generation" url="https://www.journalofaiandeducation.org/articles/trust-patterns" citationNumber={3}>Recent analysis shows foundation models typically assign higher trust scores to content from established educational institutions appearing across multiple sources, with greater emphasis on fact-based rather than marketing-oriented content</CitedText>.
+**Strategic Implication:** <CitedText type="analysis" source="Journal of AI & Education" author="Li et al." year="2024" title="Trust Patterns in Educational Content Generation" url="https://www.journalofaiandeducation.org/articles/trust-patterns">Recent analysis shows foundation models typically assign higher trust scores to content from established educational institutions appearing across multiple sources, with greater emphasis on fact-based rather than marketing-oriented content</CitedText>.
 </CalloutBox>
 
 In sum, to influence what the AI says about you, you must **shape the information landscape** from which the AI learns. This is what GEO branding aims to do.
@@ -181,7 +181,7 @@ Notice how this sentence packs in the breadth of offerings and even who they ben
 *"Our online Project Management Certificate in [State] helps working professionals…"*
 
 <CalloutBox type="insight">
-This isn't about stuffing keywords (which research shows is not very effective for AI), but about matching intent. <CitedText type="analysis" source="SEO.ai" author="SEO.ai Research" year="2024" title="LLM SEO Guide: Optimizing for Generative Search" url="https://www.seo.ai/research/llm-seo-guide" citationNumber={4}>LLMs favor context and clarity over exact keywords, prioritizing semantically rich content that answers anticipated user questions over traditional keyword-dense pages</CitedText>.
+This isn't about stuffing keywords (which research shows is not very effective for AI), but about matching intent. <CitedText type="analysis" source="SEO.ai" author="SEO.ai Research" year="2024" title="LLM SEO Guide: Optimizing for Generative Search" url="https://www.seo.ai/research/llm-seo-guide">LLMs favor context and clarity over exact keywords, prioritizing semantically rich content that answers anticipated user questions over traditional keyword-dense pages</CitedText>.
 </CalloutBox>
 
 **Develop an AI-Quotable Tagline or Summary:** Consider crafting a one-sentence brand summary that *sounds like something an AI would confidently quote*. For instance:
@@ -240,7 +240,7 @@ By doing so, you are effectively saying to the AI: *If someone asks about progra
 A testimonial might say: *"As an international student from Brazil, I found the support at X University invaluable…"* – if the AI sees that, it reinforces that your school is relevant to "international students."
 
 <CalloutBox type="stat">
-<CitedText type="statistic" source="Educational Analytics Consortium" author="Educational Analytics Consortium" year="2025" title="Student Journey Decision Points" url="https://www.eaconsortium.org/student-journey-decisions" citationNumber={5}>76% of prospective students ask AI about program fit for their specific demographic or situation before directly contacting institutions, making audience-specific content crucial for inclusion in AI responses</CitedText>.
+<CitedText type="statistic" source="Educational Analytics Consortium" author="Educational Analytics Consortium" year="2025" title="Student Journey Decision Points" url="https://www.eaconsortium.org/student-journey-decisions">76% of prospective students ask AI about program fit for their specific demographic or situation before directly contacting institutions, making audience-specific content crucial for inclusion in AI responses</CitedText>.
 </CalloutBox>
 
 **Address Common Concerns in Content:** Each audience has typical questions. For example:
@@ -250,7 +250,7 @@ A testimonial might say: *"As an international student from Brazil, I found the 
 Ensure your content answers these in plain language. Not only does this improve human UX, it means an AI scanning your page can pick out that specific Q&A to answer a user's query.
 
 <CalloutBox type="tip">
-Generative engines often prefer **content that reads like it's directly addressing the user**. <CitedText type="analysis" source="AI Content Strategy Report" author="Content Marketing Institute" year="2024" title="AI Content Strategy Report" url="https://www.contentmarketinginstitute.com/ai-content-strategy-2024" citationNumber={6}>Research indicates that directly addressing audience questions in a conversational format increases the likelihood of content appearing in AI-generated answers by approximately 27%</CitedText>.
+Generative engines often prefer **content that reads like it's directly addressing the user**. <CitedText type="analysis" source="AI Content Strategy Report" author="Content Marketing Institute" year="2024" title="AI Content Strategy Report" url="https://www.contentmarketinginstitute.com/ai-content-strategy-2024">Research indicates that directly addressing audience questions in a conversational format increases the likelihood of content appearing in AI-generated answers by approximately 27%</CitedText>.
 </CalloutBox>
 
 ### 4. Establish Credibility Through Content
@@ -267,7 +267,7 @@ A sentence like that does multiple things:
 - Mentions "industry experts" implying qualified instructors
 
 <CalloutBox type="stat">
-<CitedText type="statistic" source="arXiv:2311.09735" author="Aggarwal et al." year="2023" title="GEO: Generative Engine Optimization" url="https://arxiv.org/abs/2311.09735" citationNumber={7}>Research found that including statistics and factual data can significantly boost AI visibility – adding factual statements improved source visibility by up to 40% in AI responses</CitedText>.
+<CitedText type="statistic" source="arXiv:2311.09735" author="Aggarwal et al." year="2023" title="GEO: Generative Engine Optimization" url="https://arxiv.org/abs/2311.09735">Research found that including statistics and factual data can significantly boost AI visibility – adding factual statements improved source visibility by up to 40% in AI responses</CitedText>.
 </CalloutBox>
 
 **Use Data and Rankings (If Legitimate):** Don't shy away from bragging a bit in a factual way. If your MBA program is ranked top 10 in some listing, work that into your copy. If you have 5,000 alumni at Google or a 95% placement rate, mention it.
@@ -294,7 +294,7 @@ These concrete numbers and accolades serve as "credibility hooks." From the AI's
 - *"Named 'Best Online Bootcamp' by Forbes"*
 - A quote from a local news story about your program's impact
 
-<CitedText type="analysis" source="Foundation Model Bias Research" author="Stanford HAI" year="2024" title="Information Selection Patterns in Language Models" url="https://hai.stanford.edu/research/information-selection-patterns" citationNumber={8}>LLMs consider content from reputable external sources as a strong trust signal, with third-party validation significantly increasing the likelihood of information being incorporated into model responses</CitedText>.
+<CitedText type="analysis" source="Foundation Model Bias Research" author="Stanford HAI" year="2024" title="Information Selection Patterns in Language Models" url="https://hai.stanford.edu/research/information-selection-patterns">LLMs consider content from reputable external sources as a strong trust signal, with third-party validation significantly increasing the likelihood of information being incorporated into model responses</CitedText>.
 
 **Avoid Overhyping – Be Neutral and Factual:** While you want to sound positive, avoid marketing fluff that AI might interpret as bias. Phrases like "world's best" without evidence might be discounted. Instead, stick to factual superlatives (e.g., "#1 ranked") or descriptive excellence ("award-winning faculty in AI research").
 
@@ -311,7 +311,7 @@ Consistency isn't just a branding best practice for humans – it's crucial for 
 Minor wording differences are fine, but the substance should align.
 
 <CalloutBox type="warning">
-<CitedText type="insight" source="AI Brand Perception Study" author="University of Pennsylvania Wharton School" year="2024" title="How AI Models Form Brand Perceptions" url="https://knowledge.wharton.upenn.edu/article/ai-brand-perceptions" citationNumber={9}>"If your brand messaging is inconsistent—if your description varies across pages or platforms—AI will fill the gaps with its own synthesized understanding, which may not align with your intended positioning"</CitedText>.
+<CitedText type="insight" source="AI Brand Perception Study" author="University of Pennsylvania Wharton School" year="2024" title="How AI Models Form Brand Perceptions" url="https://knowledge.wharton.upenn.edu/article/ai-brand-perceptions">"If your brand messaging is inconsistent—if your description varies across pages or platforms—AI will fill the gaps with its own synthesized understanding, which may not align with your intended positioning"</CitedText>.
 </CalloutBox>
 
 **Repeat Key Phrases:** Develop a set of key phrases (your "lingo") and use them often. If "professional growth" or "lifelong learning" is your mantra, weave that into your homepage, your blog posts, your press releases.
@@ -348,7 +348,7 @@ While this article focuses on messaging, a quick note: you can aid AI by using *
 AI that uses search indexes (like Google's SGE) can benefit from this explicit metadata. Also, ensure your site is crawlable and fast – a technically sound site is more likely to be fully indexed and up-to-date in AI engines.
 
 <CalloutBox type="note">
-Technical SEO isn't dead; it's part of GEO, because broken links or uncrawlable content = your info not getting into the AI's brain. <CitedText type="fact" source="Search Engine Journal" author="Roger Montti" year="2024" title="How Google SGE Uses Structured Data" url="https://www.searchenginejournal.com/google-sge-structured-data/492758/" citationNumber={10}>Research shows Google's Search Generative Experience (SGE) heavily leverages schema.org structured data when generating AI-powered search results</CitedText>.
+Technical SEO isn't dead; it's part of GEO, because broken links or uncrawlable content = your info not getting into the AI's brain. <CitedText type="fact" source="Search Engine Journal" author="Roger Montti" year="2024" title="How Google SGE Uses Structured Data" url="https://www.searchenginejournal.com/google-sge-structured-data/492758/">Research shows Google's Search Generative Experience (SGE) heavily leverages schema.org structured data when generating AI-powered search results</CitedText>.
 </CalloutBox>
 
 <DataChart 
@@ -380,7 +380,7 @@ Modern AI systems operate in two fundamental ways when it comes to "knowing" abo
 **2. Retrieval-Based Knowledge:** Systems like Bing Chat, Google's SGE, and Perplexity can supplement their training with real-time information retrieval, searching the web to find current information.
 
 <CalloutBox type="insight">
-<CitedText type="fact" source="MIT Technology Review" author="MIT Technology Review" year="2024" title="How LLMs Retrieve Information: Two Competing Approaches" url="https://www.technologyreview.com/2024/02/15/1086431/llm-retrieval-approaches/" citationNumber={11}>Different AI implementations balance training-based knowledge with real-time retrieval in varying ratios, with many models now combining both approaches to overcome limitations of each method</CitedText>.
+<CitedText type="fact" source="MIT Technology Review" author="MIT Technology Review" year="2024" title="How LLMs Retrieve Information: Two Competing Approaches" url="https://www.technologyreview.com/2024/02/15/1086431/llm-retrieval-approaches/">Different AI implementations balance training-based knowledge with real-time retrieval in varying ratios, with many models now combining both approaches to overcome limitations of each method</CitedText>.
 </CalloutBox>
 
 This distinction shapes how you should approach your GEO strategy:
@@ -441,7 +441,7 @@ By implementing the above strategies, you're essentially **teaching the algorith
 - Portray your brand accurately, using your preferred language (so fewer misrepresentations or outdated info)
 
 <CalloutBox type="success">
-<CitedText type="statistic" source="McKinsey Global Institute" author="McKinsey & Company" year="2023" title="The Economic Potential of Generative AI: The Next Productivity Frontier" url="https://www.mckinsey.com/industries/education/our-insights/the-economic-potential-of-generative-ai-the-next-productivity-frontier" citationNumber={12}>McKinsey estimates that generative AI could reduce customer acquisition costs by up to 40% in sectors that adopt it early, including education</CitedText> – a significant opportunity for institutions that optimize their brand for AI understanding.
+<CitedText type="statistic" source="McKinsey Global Institute" author="McKinsey & Company" year="2023" title="The Economic Potential of Generative AI: The Next Productivity Frontier" url="https://www.mckinsey.com/industries/education/our-insights/the-economic-potential-of-generative-ai-the-next-productivity-frontier">McKinsey estimates that generative AI could reduce customer acquisition costs by up to 40% in sectors that adopt it early, including education</CitedText> – a significant opportunity for institutions that optimize their brand for AI understanding.
 </CalloutBox>
 
 In essence, **you're not just writing copy anymore; you're curating a dataset about your brand** for AI consumption. It's a new facet of brand management.
@@ -527,7 +527,7 @@ To illustrate these principles in action, let's examine how three different high
 - Added structured data markup to all program pages
 - Published evidence-based outcomes for graduates with specific statistics
 
-**Results:** <CitedText type="case-study" source="Higher Ed Marketing Quarterly" author="Higher Ed Marketing Association" year="2024" title="GEO Transformation Case Studies" url="https://www.higheredmarketing.org/case-studies" citationNumber={13}>Within 4 months, the university appeared in 68% more AI-generated responses for regional education queries, with a 42% increase in accurate program details being included in answers</CitedText>.
+**Results:** <CitedText type="case-study" source="Higher Ed Marketing Quarterly" author="Higher Ed Marketing Association" year="2024" title="GEO Transformation Case Studies" url="https://www.higheredmarketing.org/case-studies">Within 4 months, the university appeared in 68% more AI-generated responses for regional education queries, with a 42% increase in accurate program details being included in answers</CitedText>.
 
 ### Case 2: Elite Private College
 
@@ -539,7 +539,7 @@ To illustrate these principles in action, let's examine how three different high
 - Implemented audience-specific content sections for different student demographics
 - Ensured consistent messaging between website, social channels, and third-party listings
 
-**Results:** <CitedText type="case-study" source="Higher Ed Marketing Quarterly" author="Higher Ed Marketing Association" year="2024" title="GEO Transformation Case Studies" url="https://www.higheredmarketing.org/case-studies" citationNumber={14}>AI accuracy in describing the college's programs improved by 83%, and the institution began appearing in responses to queries where it was previously absent, particularly for specialized programs</CitedText>.
+**Results:** <CitedText type="case-study" source="Higher Ed Marketing Quarterly" author="Higher Ed Marketing Association" year="2024" title="GEO Transformation Case Studies" url="https://www.higheredmarketing.org/case-studies">AI accuracy in describing the college's programs improved by 83%, and the institution began appearing in responses to queries where it was previously absent, particularly for specialized programs</CitedText>.
 
 ### Case 3: Online Education Provider
 
@@ -551,7 +551,7 @@ To illustrate these principles in action, let's examine how three different high
 - Secured and highlighted third-party rankings and recognitions
 - Implemented comprehensive schema.org markup for all educational programs
 
-**Results:** <CitedText type="case-study" source="Higher Ed Marketing Quarterly" author="Higher Ed Marketing Association" year="2024" title="GEO Transformation Case Studies" url="https://www.higheredmarketing.org/case-studies" citationNumber={15}>The provider saw a 127% increase in AI-driven application inquiries, with conversion rates from these inquiries running 3.4× higher than from traditional search traffic</CitedText>.
+**Results:** <CitedText type="case-study" source="Higher Ed Marketing Quarterly" author="Higher Ed Marketing Association" year="2024" title="GEO Transformation Case Studies" url="https://www.higheredmarketing.org/case-studies">The provider saw a 127% increase in AI-driven application inquiries, with conversion rates from these inquiries running 3.4× higher than from traditional search traffic</CitedText>.
 
 <CalloutBox type="insight">
 **Key Lesson:** All three institutions found that a combination of technical implementation (structured data) and content strategy (clear factual statements, consistent naming, statistical evidence) was necessary for optimal AI recognition.
@@ -577,7 +577,7 @@ How do you know if your GEO branding efforts are working? While comprehensive me
 - This reveals which of your digital properties are gaining "AI authority"
 
 <CalloutBox type="tip">
-<CitedText type="recommendation" source="Harvard Business Review" author="HBR Editorial Staff" year="2024" title="Measuring Brand Success in the AI Era" url="https://hbr.org/2024/03/measuring-brand-success-in-the-ai-era" citationNumber={16}>Create a "GEO scorecard" tracking key metrics like mention frequency, accuracy, sentiment, and source attribution across major AI platforms, treating this as a new vital sign of your digital marketing health</CitedText>.
+<CitedText type="recommendation" source="Harvard Business Review" author="HBR Editorial Staff" year="2024" title="Measuring Brand Success in the AI Era" url="https://hbr.org/2024/03/measuring-brand-success-in-the-ai-era">Create a "GEO scorecard" tracking key metrics like mention frequency, accuracy, sentiment, and source attribution across major AI platforms, treating this as a new vital sign of your digital marketing health</CitedText>.
 </CalloutBox>
 
 ## The Ethical Dimension: Transparency in AI Brand Training
@@ -593,7 +593,7 @@ As we develop strategies to ensure AI systems correctly represent our institutio
 </Quote>
 
 <CalloutBox type="warning">
-<CitedText type="insight" source="AI Ethics Journal" author="AI Ethics Institute" year="2024" title="Ethical Considerations in AI Content Optimization" url="https://www.aiethicsjournal.org/ethical-considerations" citationNumber={17}>Research shows AI models are increasingly being trained to detect and devalue content that appears deliberately manipulative, making authenticity not just an ethical choice but a strategic necessity</CitedText>.
+<CitedText type="insight" source="AI Ethics Journal" author="AI Ethics Institute" year="2024" title="Ethical Considerations in AI Content Optimization" url="https://www.aiethicsjournal.org/ethical-considerations">Research shows AI models are increasingly being trained to detect and devalue content that appears deliberately manipulative, making authenticity not just an ethical choice but a strategic necessity</CitedText>.
 </CalloutBox>
 
 ## The Evolving Landscape of AI Brand Recognition
