--- a/src/content/tfp/00-introduction-friction-principle.mdx
+++ b/src/content/tfp/00-introduction-friction-principle.mdx
@@ -1,7 +1,7 @@
 ---
 title: "The Friction Principle: Why AI Needs Moments of Resistance"
 description: "Introducing a framework for human-AI collaboration that preserves cognitive growth through intentional friction. When convenience becomes the enemy of cognition, how do we design AI systems that make us smarter, better and kinder, not just faster?"
-publishDate: 2025-06-17
+publishDate: 2025-06-22
 series: "tfp"
 order: 0
 coverImage: "/images/tfp-intro-cover.svg"
@@ -78,7 +78,7 @@ export const frictionEffectivenessData = {
 
 But beneath this technological triumph lies a profound paradox. As we race toward AI-powered convenience, a growing body of research suggests we may be undermining the very cognitive abilities we're trying to augment. When we offload too much thinking to machines, we risk creating what psychologists call <CitedText type="fact" author="Wikipedia" year="2024" title="Automation complacency" source="Wikipedia" url="https://en.wikipedia.org/wiki/Automation_complacency">"automation complacency"</CitedText>: a gradual erosion of our own intellectual capabilities.
 
-Enters **The Friction Principle**: *the idea that the most effective human-AI collaboration requires intentional cognitive friction*. These carefully designed speed bumps keep humans actively engaged in the thinking process while preserving AI's transformative benefits.
+Enters **The Friction Principle**: *the idea that the most effective human-AI collaboration requires intentional cognitive friction*. These carefully designed speed bumps, as MIT's Renée Richardson Gosline calls them, keep humans actively engaged in the thinking process while preserving AI's transformative benefits.
 
 ## The Science of Cognitive Offloading
 
