Update accessibility article voice and content
- Change from 'we' to 'I' for consistent first-person voice
- Minor content refinements and clarity improvements
- Fix punctuation and formatting consistency

--- a/src/content/devlog/10-accessibility-implementation.mdx
+++ b/src/content/devlog/10-accessibility-implementation.mdx
@@ -16,7 +16,7 @@ import CodeBlock from '../../components/CodeBlock.astro';
 
 ## The Accessibility Wake-Up Call
 
-Web accessibility isn't just about compliance, it's about ensuring that the technical knowledge and insights we share reach everyone, regardless of their abilities or the assistive technologies they use. When I decided to conduct a comprehensive accessibility audit of Signals & Systems, I discovered that good intentions weren't enough.
+Web accessibility isn't just about compliance, it's about ensuring that the technical knowledge and insights I share reach everyone, regardless of their abilities or the assistive technologies they use. When I decided to conduct a comprehensive accessibility audit of Signals & Systems, I discovered that good intentions weren't enough.
 
 The wake-up call came from running Lighthouse audits across both desktop and mobile versions of the site. While performance and SEO scored perfectly (100/100), accessibility showed room for improvement at 96/100. More importantly, the manual accessibility checks revealed gaps that automated tools couldn't catch.
 
@@ -192,7 +192,7 @@ Beyond fixing technical issues, I created a comprehensive accessibility statemen
 
 The accessibility page establishes clear expectations:
 - Commitment to WCAG 2.1 AA compliance
-- Specific measures we take to ensure accessibility
+- Specific measures I take to ensure accessibility
 - Contact information for accessibility concerns
 - Continuous improvement promise
 
@@ -212,11 +212,11 @@ The accessibility page establishes clear expectations:
 
 ### Integration with Existing Policies
 
-The accessibility page joins our privacy and cookie policies in the footer, creating a comprehensive set of user-focused policy pages that demonstrate our commitment to transparency and user rights.
+The accessibility page joins my privacy and cookie policies in the footer, creating a comprehensive set of user-focused policy pages that demonstrate my commitment to transparency and user rights.
 
 <CalloutBox type="tip" title="Policy Integration Strategy">
   <p>
-    By placing accessibility, privacy, and cookie policies together in the footer, we create a natural grouping that signals our comprehensive approach to user rights and inclusive design.
+    By placing accessibility, privacy, and cookie policies together in the footer, I create a natural grouping that signals my comprehensive approach to user rights and inclusive design.
   </p>
 </CalloutBox>
 
@@ -289,7 +289,7 @@ For static sites on GitHub Pages, security headers require additional infrastruc
   filename="Meta Tag CSP Example"
 />
 
-For now, we're staying with GitHub Pages and accepting this limitation, but the infrastructure is documented for future migration.
+For now, I'm staying with GitHub Pages and accepting this limitation, but the infrastructure is documented for future migration.
 
 ## Results and Impact
 
@@ -332,13 +332,13 @@ The accessibility audit established a repeatable process for future improvements
 
 <CalloutBox type="success" title="Accessibility as a Design System">
   <p>
-    These improvements weren't just fixes—they became part of our design system. Every new component now starts with accessibility considerations, and color choices automatically meet WCAG standards.
+    These improvements weren't just fixes, they became part of my design system. Every new component now starts with accessibility considerations, and color choices automatically meet WCAG standards.
   </p>
 </CalloutBox>
 
 ## Looking Forward: Continuous Accessibility
 
-Accessibility isn't a one-time achievement—it's an ongoing commitment. The foundation we've built includes:
+Accessibility isn't a one-time achievement: it's an ongoing commitment. The foundation I've built includes:
 
 ### Automated Monitoring
 - Regular Lighthouse audits as part of deployment
@@ -375,7 +375,7 @@ Building accessible web experiences requires both technical implementation and c
 - Color and design decisions should consider accessibility from the beginning
 - Accessibility statements create accountability and provide user guidance
 
-The journey from 96/100 to comprehensive accessibility compliance reinforced that building for everyone isn't just the right thing to do—it creates better, more robust web experiences for all users. As we continue developing interactive technical content, these accessibility foundations ensure that knowledge sharing remains truly universal.
+The journey from 96/100 to comprehensive accessibility compliance reinforced that building for everyone isn't just the right thing to do, it also creates better, more robust web experiences for all users. As I continue developing interactive technical content, these accessibility foundations ensure that knowledge sharing remains truly universal.
 
 ---
 
